# open-stt-server

./: .tarpaulin.toml  Cargo.toml  Dockerfile.alpine  Dockerfile.cuda  Dockerfile.debian  LICENSE  README.md  deny.toml  docker-compose.yml  justfile
.githooks/: pre-commit
.github/: dependabot.yaml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pr-notify-slack.yml  release.yml  test.yml
scripts/: docker-build.sh
src/: config.rs  main.rs
src/audio/: mod.rs
src/models/: audio_utils.rs  download.rs  mod.rs  stt_model.rs
src/models/voxtral/: mod.rs  model.rs
src/models/whisper/: mod.rs  model.rs
src/server/: routes.rs  state.rs
