[package]
name = "open-stt-server"
version = "0.1.0"
edition = "2024"
description = "A Whisper-compatible STT API server"
license = "MIT"

[[bin]]
name = "open-stt-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# CLI & config
clap = { version = "4", features = ["derive", "env"] }

# ML Framework (candle)
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "c42e1fefa928335660c7877753903e59c87fd7ff", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "c42e1fefa928335660c7877753903e59c87fd7ff", optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "c42e1fefa928335660c7877753903e59c87fd7ff", optional = true }

# Tokenizers
tokenizers = "0.22"
tekken-rs = "0.1"

# Audio processing
audioadapter-buffers = "3.0.0"
rubato = "2.0.0"
symphonia = { version = "0.5", features = ["all"] }

# Utilities
anyhow = "1"
byteorder = "1"
dirs = "6"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
semver = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
tempfile = "3.10"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
cuda = ["candle", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle", "candle-core/cudnn"]
metal = ["candle"]
flash-attn = ["candle", "candle-transformers/flash-attn", "dep:candle-flash-attn"]

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "c42e1fefa928335660c7877753903e59c87fd7ff", optional = true, features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "c42e1fefa928335660c7877753903e59c87fd7ff", optional = true, features = ["metal"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "c42e1fefa928335660c7877753903e59c87fd7ff", optional = true, features = ["metal"] }

[dependencies.candle-flash-attn]
git = "https://github.com/huggingface/candle.git"
rev = "c42e1fefa928335660c7877753903e59c87fd7ff"
optional = true
